--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
     <head>
+        <meta content="width=device-width, initial-scale=1" name="viewport" />
         <title>Pierson Scarborough</title>
         <link rel="shortcut icon" type="image/png" href="favicon.png" />
         <link rel="stylesheet" href="index.css">
