--- a/index.html
+++ b/index.html
@@ -136,6 +136,11 @@
                     <div class="card">
                         <div class ="card-title">
                             <h4>BRAINZ</h4>
+                            <div class="title-icon">
+                                <a href="https://github.com/piersonscarborough/brainz" target="blank" rel="noreferrer">
+                                    <i class="fab fa-github"></i>
+                                </a>
+                            </div>
                         </div>
                         <div class ="card-image">
                             <img src="brainz-background.jpg" alt="">
@@ -204,6 +209,11 @@
                     <div class="card">
                         <div class ="card-title">
                             <h4>SHOWHUNTER</h4>
+                            <div class ="title-icon">
+                                <a href="https://github.com/piersonscarborough/showhunter" target="blank" rel="noreferrer">
+                                    <i class="fab fa-github"></i>
+                                </a>
+                            </div>
                         </div>
                         <div class ="card-image">
                             <img src="showhunter-background.jpg" alt="">
@@ -212,7 +222,7 @@
                         <div class ="card-description">
                             <div class="card-description-text">
                                 <p>
-                                    showhunter allows the user to enter a specific band or artist name and returns a series of nearby concerts where the
+                                    SHOWHUNTER allows the user to enter a specific band or artist name and returns a series of nearby concerts where the
                                     band is playing along with suggestions of similar artists also playing in the area.
                                 </p>
                             </div>
@@ -251,7 +261,7 @@
                 <h2>Skills</h2>
                 <hr class="divider" data-aos="fade-right">
                 <div class="skill-container">
-                    <div class="card-skills">
+                    <div class="skill-skills">
                         <div class="skill-icon">
                             <i class="fab fa-js-square"></i>
                         </div>
@@ -283,12 +293,8 @@
                             <i class="devicon-postgresql-plain"></i>
                         </div>
                         <div class="skill-icon">
-                            <i class="fab fa-git-alt"></i>
-                        </div>
-                        <div class="skill-icon">
                             <i class="fab fa-python"></i>
                         </div>
-                    </div>
                     </div>
                 </div>
             </div>
