--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <section class="first">
             <a class="arrow bounce-in-top" href="#about">
                 <!-- Link to your content ID -->
-                <div id="arrow-down">
+                <div class="down-arrow" id="arrow-down">
                     <i class="fa fa-chevron-down"></i>
                 </div>
             </a>
