--- a/index.html
+++ b/index.html
@@ -189,13 +189,13 @@
                         <div class="modal-content scale-in-center">
                             <span class="close">&times;</span>
                                 <div class="mobile">
-                                    <video  controls>
+                                    <video loop autoplay muted controls>
                                         <source src="brainz-mobile.mp4" type="video/mp4">
                                         Your browser does not support the video tag.
                                     </video>
                                 </div>
                                 <div class="full">
-                                    <video  controls>
+                                    <video  controls autoplay muted>
                                         <source src="brainz.mp4" type="video/mp4">
                                         Your browser does not support the video tag.
                                     </video>
