--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
         <link rel="stylesheet" href="arrow.css">
         <link rel="stylesheet" href="nav.css">
         <link rel="stylesheet" href="modal.css">
-        <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
         <link rel="stylesheet"
             href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
@@ -189,7 +188,7 @@
                         <div class="modal-content scale-in-center">
                             <span class="close">&times;</span>
                                 <div class="mobile">
-                                    <video loop autoplay muted controls>
+                                    <video playsinline loop autoplay muted controls>
                                         <source src="brainz-mobile.mp4" type="video/mp4">
                                         Your browser does not support the video tag.
                                     </video>
@@ -330,10 +329,7 @@
 
 
         <script type="text/javascript" src="script.js"></script>
-        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-        <script>
-            AOS.init();
-        </script>
+        
     </body>
 
 </html>
