--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <div class="project-content">
             <div class="projects" id="projects">
                 <h2>Projects</h2>
-                <hr class="divider " data-aos="fade-right">
+                <hr class="divider projects-divider" data-aos="fade-right">
 <!-- project-container -->
                 <div class="project-container">
 
