--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
                     <div class="text-container">
                     <h4>Hi! I'm Pierson Scarborough</h4>
                         <p>
-                            I'm a designer, a developer, and a creator. If you had asked me two years ago if I thought I would be coding and building applications
-                            today, I would’ve thought you were crazy. Computer Science always on the surface appeared to be reserved for those who
-                            excelled in mathematics and/or science, not necessarily creatives. As I saw the market gradually shifting towards the
-                            web and more and more companies were looking for designers with the ability to code, I decided to dive into this
+                            I'm a designer, a developer, and a creator. If you told me two years ago that I'd be a developer
+                            , I would’ve thought you were crazy. Computer Science appeared to be reserved for those who
+                            excelled in mathematics and/or science, not necessarily creatives. But as I saw the market gradually shifting towards the
+                            web and more opportunities for designers with the ability to code, I decided to dive into this
                             challenging discipline headfirst and haven’t looked back.
                         </p>
                         <p>    
@@ -111,7 +111,7 @@
                                 </a>
                             </div>
                             <div class="about-icon">
-                                <a href="mailto: piersonscarborough@gmail.com">
+                                <a href="mailto:piersonscarborough@gmail.com">
                                     <i class="fas fa-envelope-square"></i>
                                 </a>
                             </div>
@@ -135,10 +135,17 @@
                     <div class="card">
                         <div class ="card-title">
                             <h4>BRAINZ</h4>
-                            <div class="title-icon">
-                                <a href="https://github.com/piersonscarborough/brainz" target="blank" rel="noreferrer">
-                                    <i class="fab fa-github"></i>
-                                </a>
+                            <div class="title-icons">
+                                <div class="title-icon">
+                                    <a href="http://www.brainz.fun/" target="blank" rel="noreferrer">
+                                        <i class="fas fa-link"></i>
+                                    </a>
+                                </div>
+                                <div class="title-icon">
+                                    <a href="https://github.com/piersonscarborough/brainz" target="blank" rel="noreferrer">
+                                        <i class="fab fa-github"></i>
+                                    </a>
+                                </div>
                             </div>
                         </div>
                         <div class ="card-image">
@@ -181,6 +188,11 @@
                             <h5>GitHub</h5>
                         </a>
                     </div>
+                    <div class="project-button">
+                        <a href="http://www.brainz.fun/" target="blank" rel="noreferrer">
+                            <h5>Site</h5>
+                        </a>
+                    </div>
                 </div>
                     <div id="myModal" class="modal">
                     
@@ -208,10 +220,12 @@
                     <div class="card">
                         <div class ="card-title">
                             <h4>SHOWHUNTER</h4>
-                            <div class ="title-icon">
-                                <a href="https://github.com/piersonscarborough/showhunter" target="blank" rel="noreferrer">
-                                    <i class="fab fa-github"></i>
-                                </a>
+                            <div class="title-icons">
+                                <div class ="title-icon">
+                                    <a href="https://github.com/piersonscarborough/showhunter" target="blank" rel="noreferrer">
+                                        <i class="fab fa-github"></i>
+                                    </a>
+                                </div>
                             </div>
                         </div>
                         <div class ="card-image">
@@ -313,7 +327,7 @@
                             </a>
                         </div>
                         <div class="contact-icon">
-                            <a href="mailto: piersonscarborough@gmail.com">
+                            <a href="mailto:piersonscarborough@gmail.com">
                                 <i class="fas fa-envelope-square"></i>
                             </a>
                         </div>
@@ -328,7 +342,7 @@
         </div>
 
 
-        <script type="text/javascript" src="script.js"></script>
+        <script src="script.js"></script>
         
     </body>
 
