resume and contact sections

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         <link rel="stylesheet" href="arrow.css">
         <link rel="stylesheet" href="nav.css">
         <link rel="stylesheet" href="modal.css">
+        <link rel="stylesheet" href="resume.css">
+        <link rel="stylesheet" href="contact.css">
         <link rel="stylesheet"
             href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
@@ -312,26 +314,105 @@
                 </div>
             </div>
         </div>
-        <div class="contact-content">
-            <div class="contact" id="contact">
-                <div class="contact-container">
-                    <div class="contact-icons">
-                        <div class="contact-icon">
+
+       
+
+        <div class="resume-content">
+            <div class="resume" id="resume">
+                <h2>Resume</h2>
+                <hr class="divider" data-aos="fade-right">
+                <div class="resume-container">
+                    <div class="item">
+                        <h3>Click Me</h3>
+                        <i class="far fa-hand-point-down arrow2"></i>
+                    </div>
+                    <div class="resume-image-container">
+                        <div class="arm-image">
+                            <img src="arm.png" alt="">
+                        </div>
+                        <div class="arm-image-top">
+                            <img src="arm-top.png" alt="">
+                        </div>
+                        <div class="arm-image-bottom">
+                            <img src="arm-bottom.png" alt="">
+                        </div>
+                        <div class="resume-image">
+                            <a href="resume.pdf" target="blank" rel="noreferrer" download>
+                                <img src="resume-full.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="resume-container-full">
+                    <div class="item">
+                        <h3>Click Me</h3>
+                        <i class="far fa-hand-point-down arrow2"></i>
+                    </div>
+                    <div class="resume-image-container-full">
+                        <div class="arm-image-full">
+                            <img src="arm-full.png" alt="">
+                        </div>
+                        <div class="arm-image-full-top">
+                            <img src="arm-full-top.png" alt="">
+                        </div>
+                        <div class="arm-image-full-bottom">
+                            <img src="arm-full-bottom.png" alt="">
+                        </div>
+                        <div class="resume-image-full">
+                            <a href="resume.pdf" target="blank" rel="noreferrer" download>
+                                <img src="resume-full.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="contact-background">
+            <div class="contact-content">
+                <div class="contact" id="contact">
+                    <h2>Contact</h2>
+                    <hr class="divider" data-aos="fade-right">
+                    <div class="contact-container">
+                        <div class="contact-form-container">
+                            <form class ="contact-form" action="contact-form.php" method="post">
+                                <input class="name" type="text" name="name" placeholder="Full Name">
+                                <input class="mail" type="text" name="mail" placeholder="Your E-mail">
+                                <input class="subject"type="text" name="subject" placeholder="Subject">
+                                <textarea class="message" name="message" id="" placeholder="Message"></textarea>
+                                <div class="contact-button">
+                                    <button class="button" type="submit" name="submit">
+                                        <i class="fas fa-paper-plane"></i>
+                                        Send
+                                    </button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="footer-content">
+            <div class="footer" id="footer">
+                <div class="footer-container">
+                    <div class="footer-icons">
+                        <div class="footer-icon">
                             <a href="https://github.com/piersonscarborough" target="blank" rel="noreferrer">
                                 <i class="fab fa-github-square"></i>
                             </a>
                         </div>
-                        <div class="contact-icon">
+                        <div class="footer-icon">
                             <a href="https://www.linkedin.com/in/pierson-scarborough/" target="blank" rel="noreferrer">
                                 <i class="fab fa-linkedin"></i>
                             </a>
                         </div>
-                        <div class="contact-icon">
+                        <div class="footer-icon">
                             <a href="mailto:piersonscarborough@gmail.com">
                                 <i class="fas fa-envelope-square"></i>
                             </a>
                         </div>
-                        <div class="contact-icon">
+                        <div class="footer-icon">
                             <a href="resume.pdf" target="blank" rel="noreferrer" download>
                                 <i class="far fa-file-pdf"></i>
                             </a>
