--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                             <span class="close">&times;</span>
                                 <div class="mobile">
                                     <video playsinline loop autoplay muted controls>
-                                        <source src="brainz-mobile.mp4" type="video/mp4">
+                                        <source src="brainz2.mp4" type="video/mp4">
                                         Your browser does not support the video tag.
                                     </video>
                                 </div>
@@ -468,19 +468,6 @@
                                     </button>
                                 </div>
                             </form>
-                            <!-- <div id="contactModal" class="modal">
-                            
-                             
-                                <div class="modal-content scale-in-center">
-                                    <span id="close" class="close">&times;</span>
-                                    <div class="modal-text">
-                                        <div class="check">
-                                            <i class="far fa-check-circle"></i>
-                                        </div>
-                                        <h4>Your message has been sent.</h4>
-                                    </div>
-                                </div>
-                            </div> -->
                         </div>
                     </div>
                 </div>
