--- a/index.html
+++ b/index.html
@@ -88,9 +88,8 @@
                     <h4>Hi! I'm Pierson Scarborough</h4>
                         <p>
                             I'm a designer, a developer, and a creator. If you told me two years ago that I'd be a developer
-                            , I would’ve thought you were crazy. Computer Science appeared to be reserved for those who
-                            excelled in mathematics and/or science, not necessarily creatives. But as I saw the market gradually shifting towards the
-                            web and more opportunities for designers with the ability to code, I decided to dive into this
+                            today, I would’ve thought you were crazy. Computer science seemed to be a foreign language to me and certainly something a designer would struggle with.
+                            But as I saw more and more opportunities open for designers who also had the ability to code, I decided to dive into this
                             challenging discipline headfirst and haven’t looked back.
                         </p>
                         <p>    
